--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,4 @@
-html, body {
+html {
     margin: 0;
     padding: 0;
     background-color: black;
@@ -6,8 +6,13 @@ html, body {
   
 .interactable {
   display: flex;
-  margin: 10% 0;
+  margin: 0;
   justify-content: center;
+  align-items: center;
+}
+
+.title {
+  text-align: center;
 }
 
 canvas {
@@ -31,4 +36,25 @@ canvas {
 
 #color_pink {
   background-color: rgb(255, 0, 217);
+}
+
+@font-face {
+  font-family: "bubble";
+  src:url("bubble.ttf");
+}
+
+#spin_text{
+  font-family: bubble;
+  font-size: 50px;
+  color: wheat;
+  margin: 0;
+}
+
+#display {
+  color: #00FFFF;
+  font-size: 30px;
+}
+
+main {
+  text-align: center;
 }
